<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="338dp"
        android:layout_height="300dp"
        android:src="@drawable/register" />

    <EditText
        android:id="@+id/tv_username"
        android:layout_width="218dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_white"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="10dp" />

    <EditText
        android:id="@+id/tv_password"
        android:layout_width="218dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp" />

    <EditText
        android:id="@+id/tv_re_password"
        android:layout_width="218dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_white"
        android:ems="10"
        android:hint="@string/re_password"
        android:inputType="textPassword"
        android:paddingStart="10dp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="218dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login"
        android:text="@string/register"
        android:textColor="@color/white" />

</LinearLayout>